samba (3.2.0~pre1-1) experimental; urgency=low

  * New upstream (pre-)release
  
  [ Steve Langasek ]
  * fhs.patch: net usershares should also be stored under /var/lib, not under
    /var/run.  No transition handling in maintainer scripts, since this
    feature is not activated by default.

  [ Debconf translations ]
  * Hebrew added. Closes: #444054

  [ Christian Perrier ]
  * Split fhs.patch into 3 separate patches to make upstream integration
    easier:
    - fhs-newpaths.patch: introduce new paths
    - fhs-filespaths.patch: assign files to new paths
    - fhs-assignpaths.patch: assign paths to FHS-compatible locations

 -- Christian Perrier <bubulle@debian.org>  Sat, 29 Sep 2007 12:02:13 +0200

samba (3.0.26a-1) unstable; urgency=low

  * New upstream release.
  * Remove the samba-common/unsupported-passdb debconf template and
    the associated code in samba-common.postinst, that deals with pre-etch
    versions transition
  * Remove the samba/tdbsam template and the remaining line referencing
    it (for no need) in samba.postinst. That code was removed in 3.0.23c-2
    and was dealing with pre-3.0 transitions.

 -- Christian Perrier <bubulle@debian.org>  Sun, 16 Sep 2007 10:16:29 +0200

samba (3.0.26-1) unstable; urgency=high

  * New upstream release: security update for CVE-2007-4138: 
    incorrect primary group assignment for domain users using the rfc2307 or
    sfu winbind nss info plugin.

 -- Christian Perrier <bubulle@debian.org>  Tue, 11 Sep 2007 19:16:32 +0200

samba (3.0.25c-1) unstable; urgency=low

  [ Noèl Köthe ]
  * new upstream released from 2007-08-20
    - added smbfs deprecation information to help and manpage
      Closes: #360384
    - fixed winbind leaking file descriptors
      Closes: #410663
    - fixed smbpasswd fails with errorcode SUCCESS as normal user
      Closes: #155345

  [ Christian Perrier ]
  * Drop the (upstream unmaintained) python bindings (python-samba package)